<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:textSize="30sp"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/about"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/version_number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="10sp"
            android:gravity="start"
            android:text="@string/app_icon_credit"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_alignParentBottom="true">
        <Button
            android:onClick="onDismissButtonClick"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:padding="5sp"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </RelativeLayout >

</RelativeLayout>