<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/name"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:paddingTop="7sp"
        android:paddingBottom="7sp"
        android:paddingLeft="5dp"
        android:text="@string/name"
        android:textSize="17sp"
        android:layout_weight="0.42" />
    <View
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />
    <TextView
        android:id="@+id/mac_address"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/mac"
        android:textSize="17sp"
        android:layout_weight="0.5" />
    <View
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />
    <TextView
        android:id="@+id/device_type"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="17sp"
        android:layout_weight="0.25"/>

</LinearLayout>