<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0sp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/AppTheme"
    tools:context=".app.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="0.6" />
        <ImageView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/dog800"
            android:contentDescription="@string/smart_dog_icon"
            android:layout_marginBottom="5dp"
            android:theme="@style/Base.TextAppearance.AppCompat" />
        <View
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="onConnectButtonClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5sp"
            android:text="@string/connect"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="visible" />

        <Button
            android:onClick="onExitButtonClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>


</LinearLayout>